# uacp

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  Makefile  PROJECT.md  README.md  ROADMAP.md  TASKS.jsonl  UACP.md  kimi.plugin.json  pyproject.toml  uacp.md
.act/: pr-policy-fail-bad-branch.json  pr-policy-fail-bad-title.json  pr-policy-fail-no-assignee.json  pr-policy-pass.json  release-tag-event.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml  pull_request_template.md
.serena/: project.yml
acceptance/: Dockerfile  README.md  compose.yml  conformance.py  run.sh
codeflair/: pyproject.toml
codeflair/scripts/: bootstrap.py  demo.py  smoke.py
codeflair/spike/: README.md  fuse.py  ingest.py
codeflair/src/codeflair/: __init__.py  __main__.py  cli.py  cochange.py  crossplane.py  delta.py  eval.py  expand.py  freshness.py  grep_probe.py  manifest_anchor.py  mcp_server.py  overlay.py  policy.py  probes.py  query.py  scip_ingest.py  serena_overlay.py  store.py  trace.py  treesitter_ingest.py  witness.py
codeflair/tests/: test_cli.py  test_cochange.py  test_council_fixes.py  test_crossplane.py  test_crossplane_probe.py  test_delta_reindex.py  test_eval.py  test_expand.py  test_freshness.py  test_freshness_holes.py  test_grep_probe.py  test_heat_formula.py  test_integration_scip.py  test_manifest_anchor.py  test_mcp_server.py  test_overlay.py  test_policy.py  test_probes.py  test_query.py  test_scip_edge_relations.py  test_scip_ingest.py  test_store.py  test_trace.py  test_treesitter_ingest.py  test_witness.py
config/: artifact-schemas.yaml  autonomy-policy.yaml  evidence-clusters.yaml  gate-selection.yaml  guardian-policy.yaml  memory-policy.yaml  model-registry.yaml  phase-transitions.yaml  review-routing.yaml  roots.yaml  runtime-bindings.yaml  state.yaml  uacp.toml  verification-floor.yaml  version-control.yaml
docs/: INDEX.md  alignment-spec.md  arc42-index.md  constitution.md  decision-log.md  first-principles.md  index.md  lifecycle-reference.md  lifecycle-trace-table.md  nora-doctrine-remediation-proposal-for-council-review.md  orchestration-model.md  phase5-reserved-slot.md  proposal-schema.md  runtime-enforcement.md  runtime-integration-guide.md  runtime-porting-and-version-control.md  skill-enforcement-spec.md
executions/: cortex-editorial-image-contract-20260514-203854-execute-checkpoint-001.yaml  cortex-x-draft-revamp-execute-checkpoint-20260515.yaml  council-followthrough-gate-execute-checkpoint-20260514-doc-payload-prep.yaml  council-followthrough-gate-execute-checkpoint-20260514-doc-writer-blocked.yaml  council-followthrough-gate-execute-checkpoint-20260514-general-implementation.yaml  council-followthrough-gate-execute-checkpoint-20260514-guarded-write-surface.yaml  fixture-execute-pass-checkpoint-001.yaml  fixture-runtime-exec-deferred-checkpoint-001.yaml  nora-identity-registry-plugin-20260518-203428-execute-checkpoint-001.yaml  runtime-porting-20260513-symlink-proof.yaml  uacp-adaptive-plan-docs-20260518-execute-001.yaml  uacp-adaptive-propose-docs-20260518-execute-001.yaml  uacp-adaptive-propose-docs-20260518-execute-002.yaml  uacp-adaptive-propose-docs-20260518-execute-003.yaml  uacp-agent-council-followthrough-20260513.yaml  uacp-patch-plan-20260515-phase0-execute-checkpoint.yaml  uacp-patch-plan-20260515-phase1-drift-reconciliation.yaml  uacp-patch-plan-20260515-phase1-execute-checkpoint.yaml  uacp-patch-plan-20260515-phase2-drift-reconciliation.yaml  uacp-patch-plan-20260515-phase2-execute-checkpoint.yaml  uacp-patch-plan-20260515-phase3-drift-reconciliation.yaml  uacp-patch-plan-20260515-phase3-execute-checkpoint.yaml  uacp-patch-plan-20260515-phase4-drift-reconciliation.yaml  uacp-patch-plan-20260515-phase4-execute-checkpoint.yaml  uacp-self-patch-write-authority-20260518-execute.yaml
hooks/: hooks.json
outputs/: agent-skills-integration-current-handoff.md  cortex-editorial-image-contract-20260514-203854-resolution.yaml  cortex-x-draft-revamp-next-action-boundary-20260515.yaml  cortex-x-draft-revamp-post-merge-rollout-20260515.yaml  cortex-x-draft-revamp-pr-merged-20260515.yaml  cortex-x-draft-revamp-pr-opened-20260515.yaml  cortex-x-draft-revamp-push-restart-test-20260515.yaml  cortex-x-draft-revamp-resolution-20260515-0501.yaml  fixture-resolve-pass-closure.yaml  fixture-runtime-resolve-dropped-risk-closure.yaml  fixture-runtime-resolve-dropped-risk-resolve-selection.yaml  fixture-verify-pass-lessons.yaml  uacp-adaptive-propose-docs-20260518-lessons.yaml  uacp-adaptive-propose-docs-20260518-resolution.yaml  uacp-agent-council-followthrough-20260513-resolution.yaml  uacp-current-status.yaml  uacp-governed-lifecycle-dry-run-summary.yaml  uacp-operational-dashboard.yaml  uacp-patch-plan-20260515-lessons.yaml  uacp-patch-plan-20260515-resolve.yaml  uacp-phase4-resolution-20260514.yaml  uacp-self-patch-write-authority-20260518-resolution.yaml
plans/: agent-skills-branch-to-uacp-integration-requirements-design.md  cortex-editorial-image-contract-20260514-203854.yaml  fixture-execute-pass-piv.yaml  fixture-plan-block-scope.yaml  fixture-plan-pass-scope.yaml  fixture-runtime-exec-deferred-piv.yaml  fixture-verify-pass-piv.yaml  nora-doctrine-remediation-20260605-170000-piv.yaml  nora-doctrine-remediation-20260605-170000-plan-selection.yaml  nora-doctrine-remediation-20260605-170000-plan.yaml  nora-doctrine-remediation-20260605-170000-scope.yaml  nora-doctrine-remediation-20260605-170000-transition.yaml  nora-identity-registry-plugin-20260518-203428-plan-selection.yaml  nora-identity-registry-plugin-20260518-203428-plan.yaml  nora-identity-registry-plugin-20260518-203428-scope.yaml  uacp-adaptive-plan-docs-20260518-plan-execute-transition.yaml  uacp-adaptive-plan-docs-20260518-plan-selection.yaml  uacp-adaptive-plan-docs-20260518-plan.yaml  uacp-adaptive-plan-docs-20260518-scope.yaml  uacp-adaptive-propose-docs-20260518-plan.yaml  uacp-adaptive-propose-docs-20260518-scope.yaml  uacp-goal-driven-kickoff-prompt.md  (+9 more)
(+1538 files in other folders)
