[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# UACP is not an importable library: its code lives under skills/uacp-core/scripts
# (+ runtime-adapters/) and is loaded via sys.path (see tests/conftest.py), not as
# an installed package. `pip install -e .` exists only to install dependencies +
# project metadata. Declare no packages so setuptools' flat-layout autodiscovery
# does not error on the multiple top-level dirs (hooks/, skills/, config/,
# runtime-adapters/, …) — that error was breaking the CI editable install.
[tool.setuptools]
packages = []

[project]
name = "uacp"
version = "0.1.0"
description = "Universal Agent Control Plane"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist",
    "ruff>=0.15",
]
# Optional MCP stdio server adapter (runtime-adapters/mcp/uacp_mcp_server.py).
# Kept out of core `dependencies` so the kernel stays installable on
# pydantic + pyyaml alone; install with `pip install -e ".[mcp]"`.
mcp = [
    "mcp>=1.0",
]
# Optional heavy deps for the GATED Oracle real-model e2e
# (tests/e2e/test_oracle_realmodel_e2e.py). Kept out of core `dependencies` so
# the kernel stays installable on pydantic + pyyaml alone, and the core suite
# stays green when these are absent (the e2e SKIPS unless UACP_ORACLE_E2E=1 and
# these import). Install with: pip install -e ".[oracle-e2e]"
# - lancedb: real on-disk vector + FTS store (prebuilt wheels).
# - sentence-transformers: small real models (all-MiniLM-L6-v2 embed,
#   ms-marco-MiniLM-L-6-v2 cross-encoder rerank) — ~80MB each, downloaded to
#   the HF cache, never committed. httpx (already a transitive dep) drives the
#   real URL-mode embedding/rerank clients against in-process model stubs.
oracle-e2e = [
    "lancedb",
    "sentence-transformers",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["skills"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# Sensible default ruleset: pyflakes (F), pycodestyle errors (E),
# isort (I), pyupgrade (UP), flake8-bugbear (B).
select = ["E", "F", "I", "UP", "B"]

# Strict-vs-lenient strategy
# -------------------------
# The full ruleset is enforced on the new engines package and the e2e tests
# (both kept clean). Legacy modules predate ruff adoption and carry hundreds of
# pre-existing findings; mass-fixing them is out of scope and behaviourally
# risky, so they are relaxed to pyflakes-only (F) via per-file-ignores rather
# than excluded outright — this keeps them visible to `ruff check .` (so real
# bugs like undefined names / unused imports still surface) without drowning in
# stylistic, import-order, modernization, and bugbear noise. They can be
# tightened incrementally later. CI scopes `ruff check` to the clean paths only,
# so legacy findings never gate the build.
[tool.ruff.lint.per-file-ignores]
# Legacy kernel + adapter modules: pyflakes (F) only; silence E/I/UP/B.
"skills/uacp-core/scripts/core.py" = ["E", "I", "UP", "B"]
"skills/uacp-core/scripts/filesystem.py" = ["E", "I", "UP", "B"]
# Neutral governed-tool layer: handlers + tool-spec registry moved verbatim out
# of the (already-relaxed) hermes adapter so an MCP server can share them. The
# governed-tool descriptions/schemas are carried byte-identically (the Hermes
# register() output must stay wire-identical), so the long-line/style findings
# cannot be reflowed away — relax E/I/UP/B (keep pyflakes F) like core.py.
"skills/uacp-core/scripts/governed_handlers.py" = ["E", "I", "UP", "B"]
"skills/uacp-core/scripts/tool_specs.py" = ["E", "I", "UP", "B"]
"skills/uacp-core/scripts/contracts.py" = ["E", "I", "UP", "B"]
"skills/uacp-state/scripts/state_machine.py" = ["E", "I", "UP", "B"]
"skills/uacp-state/scripts/state.py" = ["E", "I", "UP", "B"]
"skills/uacp-web/scripts/web_backend.py" = ["E", "I", "UP", "B"]
"skills/scripts/**" = ["E", "I", "UP", "B"]
# Legacy hermes runtime adapter + repo maintenance scripts.
"runtime-adapters/**" = ["E", "I", "UP", "B"]
"scripts/**" = ["E", "I", "UP", "B"]
# Existing (non-e2e) test suites predate ruff; relax the same way.
"tests/unit/**" = ["E", "I", "UP", "B"]
"tests/integration/**" = ["E", "I", "UP", "B"]
"tests/security/**" = ["E", "I", "UP", "B"]
"tests/conftest.py" = ["E", "I", "UP", "B"]
