[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# UACP is not an importable library: its code lives under skills/uacp-core/scripts
# (+ runtime-adapters/) and is loaded via sys.path (see tests/conftest.py), not as
# an installed package. `pip install -e .` exists only to install dependencies +
# project metadata. Declare no packages so setuptools' flat-layout autodiscovery
# does not error on the multiple top-level dirs (hooks/, skills/, config/,
# runtime-adapters/, …) — that error was breaking the CI editable install.
[tool.setuptools]
packages = []

[project]
name = "uacp"
version = "0.1.0"
description = "Universal Agent Control Plane"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "jsonschema>=4.0",  # uacp-schema: per-kind JSON-Schema (draft 2020-12) validation (D9/D10)
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov",
    "pytest-xdist",
    # Pinned: ruff's formatter is version-sensitive; an unpinned range lets CI
    # float to a newer release that reformats files and reddens unrelated PRs.
    # Bump deliberately, reformatting in the same commit (also pinned in CI).
    "ruff==0.15.20",
    # Pinned: same rationale as ruff — new pyright releases add type findings
    # that can redden unrelated PRs. Bump deliberately. Also pinned in CI.
    "pyright==1.1.411",
]
# Optional MCP stdio server adapter (runtime-adapters/mcp/uacp_mcp_server.py).
# Kept out of core `dependencies` so the kernel stays installable on its
# minimal core (pydantic + pyyaml + jsonschema); install with `pip install -e ".[mcp]"`.
mcp = [
    "mcp>=1.28.1",
    # anyio is imported directly by the server (uacp_mcp_server.py); the mcp SDK
    # also depends on it, but we declare it explicitly so it is never relied on as
    # a transitive-only dep (and so the plugin manifest's drift guard requires it).
    "anyio",
]
# Optional heavy deps for the GATED Oracle real-model e2e
# (tests/e2e/test_oracle_realmodel_e2e.py). Kept out of core `dependencies` so
# the kernel stays installable on its minimal core, and the core suite
# stays green when these are absent (the e2e SKIPS unless UACP_ORACLE_E2E=1 and
# these import). Install with: pip install -e ".[oracle-e2e]"
# - lancedb: real on-disk vector + FTS store (prebuilt wheels).
# - sentence-transformers: small real models (all-MiniLM-L6-v2 embed,
#   ms-marco-MiniLM-L-6-v2 cross-encoder rerank) — ~80MB each, downloaded to
#   the HF cache, never committed. httpx (already a transitive dep) drives the
#   real URL-mode embedding/rerank clients against in-process model stubs.
oracle-e2e = [
    "lancedb",
    "sentence-transformers",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["skills"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pyright]
# Import roots. The kernel runs with these dirs on sys.path (see tests/conftest.py:16-18),
# so pyright/the LSP must search them too — otherwise it false-flags `config`, `core`,
# `engines.*`, and intra-package relative imports as unresolved, which makes its diagnostics
# untrustworthy and forces a grep fallback for symbol work. Relative paths resolve against
# this file's directory, so this works in the main checkout AND any .worktrees/ checkout.
extraPaths = [
    "skills/uacp-core/scripts",
    "skills/uacp-state/scripts",
    "runtime-adapters/hermes/plugins/uacp_guardian",
    # The plugins PARENT, so `import uacp_guardian` (the package) resolves —
    # mirrors the runtime sys.path (tests/conftest.py + the integration-test
    # bootstraps add this dir). Without it pyright false-flags every
    # `import uacp_guardian` as unresolved.
    "runtime-adapters/hermes/plugins",
    # Codeflair (the code plane) is an src-layout package with its own venv; add
    # its src so pyright resolves intra-package `codeflair.*` imports instead of
    # false-flagging them (its optional tree-sitter dep stays unresolved, as in
    # the dev venv — that single gated import is expected).
    "codeflair/src",
]
pythonVersion = "3.13"
# Basic mode repo-wide (the legacy tree is largely untyped).
typeCheckingMode = "basic"
# Strict typing is scoped to the freshly-extracted engine packages — clean code is held
# to the high bar, legacy stays basic until it is touched (mirrors the ruff strategy).
# Grow this list as each package is extracted/cleaned (A2 io, A3 heartgate, ...).
strict = [
    "skills/uacp-core/scripts/engines/guardian",
    "skills/uacp-core/scripts/engines/domain/paths.py",
    # heartgate ratchet (grow leaf-by-leaf): the pure-data + leaf-helper modules are
    # strict; the ~1k-line hub + the validators stay basic until typed (382 strict
    # findings there = a dedicated typing initiative, TypedDicts per artifact kind).
    "skills/uacp-core/scripts/engines/heartgate/models.py",
    "skills/uacp-core/scripts/engines/heartgate/validators/helpers.py",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# Sensible default ruleset: pyflakes (F), pycodestyle errors (E),
# isort (I), pyupgrade (UP), flake8-bugbear (B).
select = ["E", "F", "I", "UP", "B", "N"]

# Strict-vs-lenient strategy
# -------------------------
# The full ruleset is enforced on the new engines package and the e2e tests
# (both kept clean). Legacy modules predate ruff adoption and carry hundreds of
# pre-existing findings; mass-fixing them is out of scope and behaviourally
# risky, so they are relaxed to pyflakes-only (F) via per-file-ignores rather
# than excluded outright — this keeps them visible to `ruff check .` (so real
# bugs like undefined names / unused imports still surface) without drowning in
# stylistic, import-order, modernization, and bugbear noise. They can be
# tightened incrementally later. CI scopes `ruff check` to the clean paths only,
# so legacy findings never gate the build.
[tool.ruff.lint.per-file-ignores]
# Legacy kernel + adapter modules: pyflakes (F) only; silence E/I/UP/B/N.
"skills/uacp-core/scripts/core.py" = ["E", "I", "UP", "B", "N"]
"skills/uacp-core/scripts/filesystem.py" = ["E", "I", "UP", "B", "N"]
# Neutral governed-tool layer: handlers + tool-spec registry moved verbatim out
# of the (already-relaxed) hermes adapter so an MCP server can share them. The
# governed-tool descriptions/schemas are carried byte-identically (the Hermes
# register() output must stay wire-identical), so the long-line/style findings
# cannot be reflowed away — relax E/I/UP/B (keep pyflakes F) like core.py.
"skills/uacp-core/scripts/governed_handlers.py" = ["E", "I", "UP", "B", "N"]
"skills/uacp-core/scripts/tool_specs.py" = ["E", "I", "UP", "B", "N"]
"skills/uacp-core/scripts/contracts.py" = ["E", "I", "UP", "B", "N"]
"skills/uacp-state/scripts/state_machine.py" = ["E", "I", "UP", "B", "N"]
"skills/uacp-state/scripts/state.py" = ["E", "I", "UP", "B", "N"]
"skills/uacp-web/scripts/web_backend.py" = ["E", "I", "UP", "B", "N"]
"skills/scripts/**" = ["E", "I", "UP", "B", "N"]
# Legacy hermes runtime adapter + repo maintenance scripts.
"runtime-adapters/**" = ["E", "I", "UP", "B", "N"]
"scripts/**" = ["E", "I", "UP", "B", "N"]
# Existing (non-e2e) test suites predate ruff; relax the same way.
"tests/unit/**" = ["E", "I", "UP", "B", "N"]
"tests/integration/**" = ["E", "I", "UP", "B", "N"]
"tests/security/**" = ["E", "I", "UP", "B", "N"]
"tests/conftest.py" = ["E", "I", "UP", "B", "N"]
# Oracle exception names predate the N (pep8-naming) rule: grandfather only N818
# (the "…Error" suffix) on the existing `*Unavailable` exceptions — renaming them
# touches every raise/except site and is out of scope. New engine code is full-N.
"skills/uacp-core/scripts/engines/oracle/**" = ["N818"]
